[gd_scene load_steps=68 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://art/player/male/idle/4.png" type="Texture" id=2]
[ext_resource path="res://art/player/female/death/2.png" type="Texture" id=3]
[ext_resource path="res://art/player/female/death/3.png" type="Texture" id=4]
[ext_resource path="res://art/player/female/death/4.png" type="Texture" id=5]
[ext_resource path="res://art/player/male/idle/7.png" type="Texture" id=6]
[ext_resource path="res://art/player/female/death/1.png" type="Texture" id=7]
[ext_resource path="res://art/player/female/idle/5.png" type="Texture" id=8]
[ext_resource path="res://art/player/female/death/6.png" type="Texture" id=9]
[ext_resource path="res://art/player/female/idle/7.png" type="Texture" id=10]
[ext_resource path="res://art/player/female/death/8.png" type="Texture" id=11]
[ext_resource path="res://art/player/female/death/5.png" type="Texture" id=12]
[ext_resource path="res://art/player/female/death/9.png" type="Texture" id=13]
[ext_resource path="res://art/player/female/move/1.png" type="Texture" id=14]
[ext_resource path="res://art/player/female/idle/8.png" type="Texture" id=15]
[ext_resource path="res://art/player/female/idle/4.png" type="Texture" id=16]
[ext_resource path="res://art/player/female/idle/3.png" type="Texture" id=17]
[ext_resource path="res://art/player/female/idle/1.png" type="Texture" id=18]
[ext_resource path="res://art/player/female/idle/2.png" type="Texture" id=19]
[ext_resource path="res://art/player/female/idle/6.png" type="Texture" id=20]
[ext_resource path="res://art/player/female/death/7.png" type="Texture" id=21]
[ext_resource path="res://art/player/male/death/3.png" type="Texture" id=22]
[ext_resource path="res://art/player/female/move/2.png" type="Texture" id=23]
[ext_resource path="res://art/player/female/move/9.png" type="Texture" id=24]
[ext_resource path="res://art/player/female/move/10.png" type="Texture" id=25]
[ext_resource path="res://art/player/female/move/12.png" type="Texture" id=26]
[ext_resource path="res://art/player/male/death/5.png" type="Texture" id=27]
[ext_resource path="res://art/player/male/death/4.png" type="Texture" id=28]
[ext_resource path="res://art/player/female/move/4.png" type="Texture" id=29]
[ext_resource path="res://art/player/female/move/7.png" type="Texture" id=30]
[ext_resource path="res://art/player/female/move/8.png" type="Texture" id=31]
[ext_resource path="res://art/player/male/death/6.png" type="Texture" id=32]
[ext_resource path="res://art/player/female/move/5.png" type="Texture" id=33]
[ext_resource path="res://art/player/male/idle/8.png" type="Texture" id=34]
[ext_resource path="res://art/player/female/move/11.png" type="Texture" id=35]
[ext_resource path="res://art/player/female/move/3.png" type="Texture" id=36]
[ext_resource path="res://art/player/male/death/1.png" type="Texture" id=37]
[ext_resource path="res://art/player/female/move/6.png" type="Texture" id=38]
[ext_resource path="res://art/player/male/idle/5.png" type="Texture" id=39]
[ext_resource path="res://art/player/male/death/2.png" type="Texture" id=40]
[ext_resource path="res://art/player/male/idle/3.png" type="Texture" id=41]
[ext_resource path="res://art/player/male/death/9.png" type="Texture" id=42]
[ext_resource path="res://art/player/male/idle/6.png" type="Texture" id=43]
[ext_resource path="res://art/player/male/death/7.png" type="Texture" id=44]
[ext_resource path="res://art/player/male/death/8.png" type="Texture" id=45]
[ext_resource path="res://art/player/male/idle/1.png" type="Texture" id=46]
[ext_resource path="res://art/player/male/idle/2.png" type="Texture" id=47]
[ext_resource path="res://art/player/male/move/2.png" type="Texture" id=48]
[ext_resource path="res://art/player/male/move/3.png" type="Texture" id=49]
[ext_resource path="res://art/player/male/move/4.png" type="Texture" id=50]
[ext_resource path="res://art/player/male/move/1.png" type="Texture" id=51]
[ext_resource path="res://art/player/male/move/12.png" type="Texture" id=52]
[ext_resource path="res://art/player/male/move/10.png" type="Texture" id=53]
[ext_resource path="res://art/player/male/move/9.png" type="Texture" id=54]
[ext_resource path="res://art/player/male/move/6.png" type="Texture" id=55]
[ext_resource path="res://art/player/male/move/5.png" type="Texture" id=56]
[ext_resource path="res://art/player/male/move/11.png" type="Texture" id=57]
[ext_resource path="res://art/player/male/move/7.png" type="Texture" id=58]
[ext_resource path="res://art/player/male/move/8.png" type="Texture" id=59]
[ext_resource path="res://art/player/female/death/12.png" type="Texture" id=60]
[ext_resource path="res://art/player/female/death/10.png" type="Texture" id=61]
[ext_resource path="res://art/player/female/death/11.png" type="Texture" id=62]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 23 ), ExtResource( 36 ), ExtResource( 29 ), ExtResource( 33 ), ExtResource( 38 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 35 ), ExtResource( 26 ) ],
"loop": true,
"name": "female_move",
"speed": 12.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 20 ), ExtResource( 10 ), ExtResource( 15 ) ],
"loop": true,
"name": "female_idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 40 ), ExtResource( 22 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 32 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 42 ) ],
"loop": false,
"name": "male_death",
"speed": 25.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 56 ), ExtResource( 55 ), ExtResource( 51 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 56 ), ExtResource( 55 ), ExtResource( 51 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 56 ), ExtResource( 55 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 54 ), ExtResource( 53 ), ExtResource( 57 ), ExtResource( 52 ) ],
"loop": true,
"name": "male_move",
"speed": 10.0
}, {
"frames": [ ExtResource( 46 ), ExtResource( 47 ), ExtResource( 41 ), ExtResource( 2 ), ExtResource( 39 ), ExtResource( 43 ), ExtResource( 6 ), ExtResource( 34 ) ],
"loop": true,
"name": "male_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 21 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 60 ) ],
"loop": false,
"name": "female_death",
"speed": 25.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 21.2065
height = 109.871

[sub_resource type="Animation" id=3]
resource_name = "damage"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 20.0258

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 155.53, 111.424 )
scale = Vector2( 1.2, 1.2 )
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "male_move"
frame = 2
playing = true

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 4.17239, 10.431 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 3 )
anims/death = SubResource( 4 )

[node name="knockback_timer" type="Timer" parent="."]
one_shot = true

[node name="melee_weapon" type="Area2D" parent="."]
position = Vector2( 62.2437, 8.9985 )

[node name="collision" type="CollisionShape2D" parent="melee_weapon"]
shape = SubResource( 5 )
disabled = true

[node name="dash_cooldown" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="knockback_timer" to="." method="_on_knockback_timer_timeout"]
[connection signal="body_entered" from="melee_weapon" to="." method="_on_melee_weapon_body_entered"]
[connection signal="timeout" from="dash_cooldown" to="." method="_on_dash_cooldown_timeout"]
